--- a/CV.html
+++ b/CV.html
@@ -6,7 +6,7 @@
     </head>    
     <body>
         <h1 style="color:rgb(7, 219, 183)"; style="font-family:verdana">LUCIANA CAPPA</h1>
-        <p><h4>Personal Information</h4></p>
+        <h4>Personal Information</h4>
         <p>Phone: +41799261060</p>
         <p>email: lucianacappa@gmail.com</p>
 
@@ -23,16 +23,16 @@
             to convert data into information to make better
             decisions.</p>
 
-            <h2 style="color:rgb(17, 122, 105)"; style="font-family:verdana"> WORK EXPERIENCE</h2>
-            <p><h4>12/2022 - Present // Geospatial Software Tester - Drone Harmony</h4></p>
+        <h2 style="color:rgb(17, 122, 105)"; style="font-family:verdana"> WORK EXPERIENCE</h2>
+            <h4>12/2022 - Present // Geospatial Software Tester - Drone Harmony</h4>
             <ul>
                 <li>Requirement-based testing. Authoring and execution of test cases of Drone software for autonomous flight and integration with hardware. </li>
                 <li>Working with colleagues to ensure consistency of documentation.</li>
                 <li>UX/UI Improvement.</li>
             </ul>
 
-            <p><h4>01/2021 - 08/2022 // Sr. GIS Quality Engineer - Qualitest</h4></p>
-            <p><b>Assistant to Project Manager<p></b>
+            <h4>01/2021 - 08/2022 // Sr. GIS Quality Engineer - Qualitest</h4>
+            <b>Assistant to Project Manager</b>
             <ul>
                 <li>Resource and equipment coordinator, meetings and information facilitator. </li>
                 <li>Maintaining and monitoring project plan and schedule.</li>
@@ -45,9 +45,9 @@
                 <li>Assisting Leads in management of test tracking and workload. Understanding of new business functions and creating training material for the team on new relevant GIS capabilities.</li>
                 <li>Leading and supervising new team members, assigning work, and verifying functionality and quality of team deliverables.</li>
             </ul>
-            <p><h4>05/2018 - 07/2019 // "Work and Holiday" Programme - France </h4></p>
-            <p><h4>08/2014 - 04/2018 // Geologist - YPF</h4></p>
-            <p><b>Operative Development geologist</p></b>
+            <h4>05/2018 - 07/2019 // "Work and Holiday" Programme - France </h4>
+            <h4>08/2014 - 04/2018 // Geologist - YPF</h4>
+            <b>Operative Development geologist</b>
             <ul>
                 <li>Resource and equipment coordinator, meetings and information facilitator. </li>
                 <li>Maintaining and monitoring project plan and schedule.</li>
@@ -61,9 +61,27 @@
             <ul>
                 <li>Providing geological assistance for development projects in Austral and Neuquina Basin in conventional and unconventional fields.</li>  
             </ul>
-
-
-
+        <h2 style="color:rgb(17, 122, 105)"; style="font-family:verdana"> ACADEMIC BACKGROUND</h2>
+            <p>02/2022 - 06/2023 <b>MasterGIS Online - ESRI Spain</b> </p>
+            <p>06/2020 - 12/2020 <b>Diploma in Digital Elevation Models</b> - UBA. Final Thesis: <a href="https://www.linkedin.com/in/luciana-ayelen-cappa/overlay/education/660510965/multiple-media-viewer/?profileId=ACoAAA8hPngBwFlm5dNIC-Yy7O-i6RnOqr7JyOA&treasuryMediaId=1611058941170 "target="_blank">Geological risk analysis in the Ñireco River Basin</a></p>
+            <p>10/2020 <b>- Introduction to Remote Sensing and its application in Geology</b> - UBA. Final Work: <a href="https://www.linkedin.com/in/luciana-ayelen-cappa/details/education/690934895/multiple-media-viewer/?profileId=ACoAAA8hPngBwFlm5dNIC-Yy7O-i6RnOqr7JyOA&treasuryMediaId=1635509483437 "target="_blank">Multi-temporal deforestation analysis on the border of Chaco and
+            Santiago del Estero provinces in Argentina.</a></p>
+            <p>2008 - 2016 <b>Licentiate in Geological Sciences</b> (+5 years - equivalent to a Master's degree) - UBA (University of Buenos Aires) - Average 7.6/10. Final degree thesis: <a href="https://www.linkedin.com/in/luciana-ayelen-cappa/overlay/1591630555236/single-media-viewer/?type=DOCUMENT&profileId=ACoAAA8hPngBwFlm5dNIC-Yy7O-i6RnOqr7JyOA "target="_blank">Paleoenvironmental analysis of drill core samples in "Loma Negra NI" field (Lajas Formation), Dorsal de Huincul, Neuquén, Argentina.</a></p>
+            <b>Skills:</b> Multispectral and Geological Map creation - Spatial Data Mining - Satellite Imagery classification - Statistical Analysis - Data over time examination - Underground seismic interpretation</p>
+        <h2 style="color:rgb(17, 122, 105)"; style="font-family:verdana"> FURTHER TRAINING</h2>
+        <ul>
+            <li>Remote Sensing applied to Hydrogeology.</li> 
+            <li>Geographic Information Systems level I&II.</li> 
+            <li>Written communication skills.</li>
+            <li>Effective presentation skills.</li>
+            <li>Oratory Integral Programme.</li>
+        </ul>
+        <h2 style="color:rgb(17, 122, 105)"; style="font-family:verdana"> VOLUNTEERING EXPERIENCE</h2>
+        <ul>
+            <li>Mentoring - Career counselor for geology students.</li> 
+            <li>Mentoring - Educational support for children of primary and high school in math, science and history..</li> 
+            <li>Mentoring - Participation in the Science Week, as a children's learning tutor on topics related to coastal geology at University of Buenos Aires.</li>
+        </ul>
     
     </body>
 </html>
