--- a/CV.html
+++ b/CV.html
@@ -3,14 +3,45 @@
     <head>
         <meta charset="utf-8">
         <title>CV-CAPPA</title>
+        <style>
+             body {
+        font-family: Arial, sans-serif;
+        margin: 40px;
+        line-height: 1.6;
+      }
+
+      h1 {
+        color: rgb(7, 219, 183);
+        font-family: verdana;
+        text-align: center;
+      }
+
+      h2 {
+        color: rgb(17, 122, 105);
+        font-family: verdana;
+        margin-top: 50px;
+      }
+
+      h4 {
+        font-weight: bold;
+      }
+
+      ul {
+        margin-left: 20px;
+      }
+
+      a {
+        color: blue;
+      }
+        </style>
     </head>    
     <body>
-        <h1 style="color:rgb(7, 219, 183)"; style="font-family:verdana">LUCIANA CAPPA</h1>
+        <h1>LUCIANA CAPPA</h1>
         <h4>Personal Information</h4>
         <p>Phone: +41799261060</p>
         <p>email: lucianacappa@gmail.com</p>
 
-        <h2 style="color:rgb(17, 122, 105)"; style="font-family:verdana">SUMMARY</h2>
+        <h2>SUMMARY</h2>
         <p> I’m a geologist working in IT, interested in
             developing my career in Remote Sensing and Data
             Science. Passionate on learning about new
@@ -23,7 +54,7 @@
             to convert data into information to make better
             decisions.</p>
 
-        <h2 style="color:rgb(17, 122, 105)"; style="font-family:verdana"> WORK EXPERIENCE</h2>
+        <h2> WORK EXPERIENCE</h2>
             <h4>12/2022 - Present // Geospatial Software Tester - Drone Harmony</h4>
             <ul>
                 <li>Requirement-based testing. Authoring and execution of test cases of Drone software for autonomous flight and integration with hardware. </li>
@@ -61,14 +92,14 @@
             <ul>
                 <li>Providing geological assistance for development projects in Austral and Neuquina Basin in conventional and unconventional fields.</li>  
             </ul>
-        <h2 style="color:rgb(17, 122, 105)"; style="font-family:verdana"> ACADEMIC BACKGROUND</h2>
+        <h2> ACADEMIC BACKGROUND</h2>
             <p>02/2022 - 06/2023 <b>MasterGIS Online - ESRI Spain</b> </p>
             <p>06/2020 - 12/2020 <b>Diploma in Digital Elevation Models</b> - UBA. Final Thesis: <a href="https://www.linkedin.com/in/luciana-ayelen-cappa/overlay/education/660510965/multiple-media-viewer/?profileId=ACoAAA8hPngBwFlm5dNIC-Yy7O-i6RnOqr7JyOA&treasuryMediaId=1611058941170 "target="_blank">Geological risk analysis in the Ñireco River Basin</a></p>
             <p>10/2020 <b>- Introduction to Remote Sensing and its application in Geology</b> - UBA. Final Work: <a href="https://www.linkedin.com/in/luciana-ayelen-cappa/details/education/690934895/multiple-media-viewer/?profileId=ACoAAA8hPngBwFlm5dNIC-Yy7O-i6RnOqr7JyOA&treasuryMediaId=1635509483437 "target="_blank">Multi-temporal deforestation analysis on the border of Chaco and
             Santiago del Estero provinces in Argentina.</a></p>
             <p>2008 - 2016 <b>Licentiate in Geological Sciences</b> (+5 years - equivalent to a Master's degree) - UBA (University of Buenos Aires) - Average 7.6/10. Final degree thesis: <a href="https://www.linkedin.com/in/luciana-ayelen-cappa/overlay/1591630555236/single-media-viewer/?type=DOCUMENT&profileId=ACoAAA8hPngBwFlm5dNIC-Yy7O-i6RnOqr7JyOA "target="_blank">Paleoenvironmental analysis of drill core samples in "Loma Negra NI" field (Lajas Formation), Dorsal de Huincul, Neuquén, Argentina.</a></p>
             <b>Skills:</b> Multispectral and Geological Map creation - Spatial Data Mining - Satellite Imagery classification - Statistical Analysis - Data over time examination - Underground seismic interpretation</p>
-        <h2 style="color:rgb(17, 122, 105)"; style="font-family:verdana"> FURTHER TRAINING</h2>
+        <h2> FURTHER TRAINING</h2>
         <ul>
             <li>Remote Sensing applied to Hydrogeology.</li> 
             <li>Geographic Information Systems level I&II.</li> 
@@ -76,7 +107,7 @@
             <li>Effective presentation skills.</li>
             <li>Oratory Integral Programme.</li>
         </ul>
-        <h2 style="color:rgb(17, 122, 105)"; style="font-family:verdana"> VOLUNTEERING EXPERIENCE</h2>
+        <h2> VOLUNTEERING EXPERIENCE</h2>
         <ul>
             <li>Mentoring - Career counselor for geology students.</li> 
             <li>Mentoring - Educational support for children of primary and high school in math, science and history..</li> 
